[metadata]
description_file = README.md

[flake8]
per_file_ignores =
    # init files may contain imports, which are not used within init - ignore the F401
    */__init__.py: E501,F401,F403

    # ignore F821, caused by string typings (used to avoid e.g. cyclic imports)
    qf_lib/containers/*: E501,F821
    qf_lib/containers/series/*: E501,F821
    qf_lib/containers/futures/*: E501,F821
    qf_lib/plotting/*: E501,F821

    # ignore the invalid escape sequence (caused by putting a path inside docs string)
    qf_lib/plotting/charts/regression_chart.py: E501,W605

    # ignore the necessary import
    qf_lib/plotting/charts/surface_chart_3d.py: E501,F401

    # try except for cvxopt import
    qf_lib/tests/unit_tests/portfolio_construction/test_kelly_portfolio.py: E501,F401
    qf_lib/tests/unit_tests/portfolio_construction/test_max_diversification_portfolio.py: E501,F401
    qf_lib/tests/unit_tests/portfolio_construction/test_max_excess_return_portfolio.py: E501,F401
    qf_lib/tests/unit_tests/portfolio_construction/test_max_sharpe_ratio_portfolio.py: E501,F401
    qf_lib/tests/unit_tests/portfolio_construction/test_minvariance_portfolio.py: E501,F401
    qf_lib/tests/unit_tests/portfolio_construction/test_multifactor_portfolio.py: E501,F401

    # ignore the invalid escape sequence (caused by putting a path inside docs string)
    qf_lib/documents_utils/document_exporting/pdf_exporter.py: E501,W605

    # Put plt.ion() at top of imports in the following files
    demo_scripts/backtester/run_alpha_model_backtest_demo.py: E501,E402
    demo_scripts/backtester/monitor_example.py: E501,E402

    # Ignore too long lines errors and line breaks before/after binary operators, Ignore module level import not at top of file
    /* : E501,W503,W504,E402

exclude =
    .git,
    .gitlab,
    .pytest_cache,
    docs,
    input,
    install,
    logs

[versioneer]
VCS = git
style = pep440
versionfile_source = qf_lib/_version.py
versionfile_build = qf_lib/_version.py
tag_prefix = v
parentdir_prefix = qf_lib-